# radiantNetScraper

./: .gitignore  Dockerfile  README.md  channels.scm  guix.scm  manifest.scm  pyproject.toml  requirements.txt
radiant_net_scraper/: config.py  data_parser.py  database.py  fronius_session.py  ingestion_flow.py  scrape.py  scripts.py  types.py
radiant_net_scraper/data/: default_config.json  metaconfig.json
scripts/: scrape.py
tests/: conftest.py  test_config.py  test_config_cases.py  test_ingestion_flow.py  test_parse_json_files.py  test_parse_json_files_cases.py  test_scrape.py  test_scripts.py
tests/test_data/: default.json  emergency_power.json  from_gen_to_somewhere.json  paywalled.json  reduced_col_set.json  reduced_col_set2.json  reduced_col_set3.json  wattpilot.json  wattpilot_consumption.json  wattpilot_production.json
tests/test_infra/: anonymize_data_json.py  common_test_infra.py
