[project]
requires-python = ">=3.9.9"
dependencies = [
    "beautifulsoup4==4.11.*",
    "lxml==4.9.*",
    "python-dotenv==0.21.*",
    "requests==2.31.*",
    "numpy==1.26.*",
    "pandas==2.2.*",
    "pipe==2.2.*",
]
name = "radiant-net-scraper"
version = "0.1.0"
description = "Scraping & saving usage data from radiantNet or similar websites."
authors = [{ name = "Cormochamelion", email = "cormocodran1.5@gmail.com" }]

[project.optional-dependencies]
development = ["black==22.12.*", "pytest-cases<=3.8.5", "pytest<=8.3"]

[project.scripts]
radiant-net-scraper = "radiant_net_scraper.scripts:scrape"
radiant-net-parser = "radiant_net_scraper.scripts:parse_json_files"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["radiant_net_scraper"]
